// Copyright 2021 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.kingdom;

import "google/protobuf/timestamp.proto";

option java_package = "org.wfanet.measurement.internal.kingdom";
option java_multiple_files = true;

// Duchy ID configuration. Used to map external and internal ids for duchies in
// internal Kingdom services.
message DuchyIdConfig {
  message Duchy {
    // The ID of the Duchy that is provided by the duchy owner entity.
    // Can be known by external entities.
    string external_duchy_id = 1;

    // The ID of the Duchy that is provided by the Kingdom upon start.
    // Not known by external entities - only Kingdom is aware of this ID.
    fixed64 internal_duchy_id = 2;

    // Start of the Duchy's active time range, inclusive.
    google.protobuf.Timestamp active_start_time = 3;

    // End of the Duchy's active time range, inclusive. If not specified, it
    // implies the end is unbounded.
    google.protobuf.Timestamp active_end_time = 4;
  }
  // The list of all the Duchy information in this config message
  repeated Duchy duchies = 1;
}
